# routee-transit

./: .buildinfo  .gitignore  LICENSE.txt  README.md  api.html  contributing.html  data.html  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  prediction.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yaml  deploy-docs.yaml
.ipynb_checkpoints/: _00_GTFS_Final_One_Agency_Trip_Energy-checkpoint.ipynb
_modules/: index.html
_modules/nrel/routee/transit/: deadhead_router.html  depot_deadhead.html  gtfs_processing.html  mid_block_deadhead.html  predictor.html  thermal_energy.html
_sources/examples/: Utah_Transit_Agency_example.ipynb
docs/: _config.yml  _toc.yml  api.md  contributing.md  index.md  installation.md  prediction.md  usage.md
docs/examples/: Utah_Transit_Agency.ipynb  Utah_Transit_Agency_example.ipynb  Utah_Transit_Agency_example.py
examples/: Utah_Transit_Agency_example.html
gtfs_realtime/: pyproject.toml  scraper.py
nrel/routee/transit/: __init__.py  predictor.py
nrel/routee/transit/prediction/: add_depot_to_blocks.py  add_temp_feature.py  create_betweenTrip_deadhead_stops.py  create_betweenTrip_deadhead_trips.py  routee.py  (+4 more)
routee_transit/: README.md
routee_transit/prediction/: gtfs_feature_processing.py  routee.py
scripts/: README.md  single_agency_full_analysis.py
scripts/feeds/: extract_static_gtfs.py  gather_feeds.py
scripts/gtfs_realtime/: scraper.py
src/routee_transit/: __about__.py
tests/: Untitled.ipynb  debug.py  test_betweentrip_deadhead.ipynb  test_stub.py
(+3 files in other folders)
